--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     
                 <div class="header__inner">
                     <a href="https://vzlom.kiev.ua/ua/" class="top-logo" title="На головну">
-                        <img src="img/_design/logo_ua.webp" width="250" height="55" alt="logo" title="Logo">
+                        <img src="img/_design/logo.webp" width="250" height="55" alt="logo" title="Logo">
                     </a>
     
                     <button href="https://vzlom.kiev.ua/ua/doors/index.php" class="bronedveri-btn">Броньовані двері</button>
